# rust-os

./: Cargo.toml  README.md
.cargo/: config
src/: gdt.rs  interrunpts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
