[package]
name = "blog_os"
version = "0.1.0"
authors = ["16Yongjin <yongjin0802@gmail.com>"]
edition = "2018"

# > cargo bootimage
# > qemu-system-x86_64 -drive format=raw,file=bootimage-blog_os.bin

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.5"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "target/x86_64-blog_os/debug/bootimage-blog_os.bin"
run-command = ["qemu-system-x86_64", "-curses", "-drive", "format=raw,file={}", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
  "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300